test/invalid/no-root.mjml
<!-- Error: missing <mjml> root element -->
<html>
  <body>This is not MJML</body>
</html>
